regactor chat messgages and update buttons on profile